[package]
name = "reflector-dao-contract"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
soroban-sdk = "21.6.0"
cvt = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban"}
cvt-soroban = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban"}
cvt-soroban-macros = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban"}
nondet = {git = "https://github.com/Certora/solana-cvt.git", branch="dev-soroban", default-features=false, features=["soroban"]}

[dev-dependencies]
soroban-sdk = { version = "21.4.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true