[package]
name = "reflector-dao-contract"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
soroban-sdk = "21.7.6"

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true